assets/css/custom.css
/* ... */
/* Mobile */
@media (min-width: 481px) and (max-width: 767px) {
    .navbar.navbar-transparent .navbar-header {
        /*text-align: center;*/
    }

    .hs-caption {
        padding-top: 16em !important;
        margin-left: 2em;
    }

    .caption-content {
        padding-top: 0;
    }

    #astro_1, #astro_2 {
        max-width: 100vw;
        height: auto;
    }

    #astro_1 {
        top: 55%;
        right: 45%;
        height: 400px;
    }

    #astro_2 {
        top: 50%;
        right: 11%;
        height: 300px;
    }

    @keyframes hovering_1 {
        0% {
            transform: translateY(25px);
        }
        100% {
            transform: none;
        }
    }
    @keyframes hovering_2 {
        0% {
            transform: none;
        }
        100% {
            transform: translateY(25px);
        }
    }
}

/* Small mobile */
@media screen and (max-width: 480px) {
    .hs-caption {
        padding-top: 16em !important;
        margin-left: 2em;
    }

    .caption-content {
        padding-top: 0;
    }

    #team .panel {
        width: 100% !important;
    }

    #astro_1 {
        top: 50%;
        height: 260px;
        left: 10%;
        animation-duration: 5s;
    }

    #astro_2 {
        height: 220px;
        right: 10%;
        top: 50%;
        animation-duration: 5.5s;
    }

    .work-details-title, .tech-title, .pricing-details-title {
        font-size: 30px !important;
        font-weight: normal !important;
    }

    #what-we-do {
        padding-bottom: 30px !important;
    }

    #team {
        padding-top: 30px !important;
    }

    .card-enterprise .tier-cost {
        font-size: 30px;
    }

    .media-list {
        max-width: 100% !important;
    }
}

@media screen and (max-width: 410px) {
    .hs-title-size-3 {
        font-size: 23px !important;
    }
}

@media screen and (max-width: 369px) {
    .hs-title-size-3 {
        font-size: 20px !important;
    }

    .hs-title-size-2 {
        font-size: 15px;
    }

    .work-details-title, .tech-title, .pricing-details-title {
        font-size: 26px;
        font-weight: normal;
    }

    #astro_1 {
        left: 5% !important;
        animation-duration: 5s;
    }

    #astro_2 {
        right: 5% !important;
        animation-duration: 5.5s;
    }
}


/******************************************************************************
 Header/navbar
 *****************************************************************************/
#ckcollab_logo_svg {
    max-width: 100vw;
    cursor: pointer;
    margin-top: 4px;
    margin-bottom: -5px;


    /* Specifying this height makes transitions nice and links aligned properly */

    /*-webkit-filter: drop-shadow(-2px -2px 10px rgba(0, 0, 0, 0.59));*/
    /*filter: drop-shadow(-2px -2px 10px rgba(0, 0, 0, 0.59));*/

    -webkit-transition: all 0.1s ease-in-out;
    -moz-transition: all 0.1s ease-in-out;
    -o-transition: all 0.1s ease-in-out;
    transition: all 0.1s ease-in-out;
}

.navbar-transparent #ckcollab_logo_svg {
    height: 300px;
}

#ckcollab_logo_svg:hover {
    margin-top: 0;
    opacity: 1;
}

.navbar.navbar-transparent .navbar-nav > li > a {
    /* Hide links when scrolled to the top of the page */
    display: none;
}

.navbar:not(.navbar-transparent) #ckcollab_logo_svg {
    /*height: 50px;*/
}

.navbar.navbar-transparent .ckclogo .letters path,
.navbar.navbar-transparent .ckclogo .border {
    fill: #efefef;
}

/* When navbar does not have class .navbar-transparent (aka scrolled past the top) */
.navbar:not(.navbar-transparent) .ckclogo .border {
    fill: #efefef;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path {
    fill: #efefef;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-timing-function: ease-in-out;
    animation-name: alternating-logo-letters;
}

/* Nav links */
.navbar:not(.navbar-transparent) .navbar-nav > li > a {
    color: #efefef;
}

.navbar:not(.navbar-transparent) .navbar-nav > li > a:hover {
    color: #222;
}

@media (min-width: 768px) {
    .navbar:not(.navbar-transparent) .navbar-nav > li > a {
        padding-top: 15px;
        padding-bottom: 15px;
    }

    #who-for img {
        width: 115px;
    }

    #brand_draper {
        margin-top: 30px;
    }

    a #brand_draper:hover {
        margin-top: 25px;
    }

    .navbar-transparent #ckcollab_logo_svg {
        height: 300px;
        margin-left: 0;
    }
}

@media (max-width: 767px) {

    .hagadone{
        height: 225px !important;
        width: auto;
        filter: drop-shadow(0px 0px 1px #bbb);
    }

    .navbar-custom {
        background: none;
        border: 0;
        border-bottom: 0 !important;
    }

    .navbar-transparent #ckcollab_logo_svg {
        height: 175px;
        margin-left: 2em;
    }

    #home {
        background-position: 98% center;
    }

    #who-for {
        padding-bottom: 20px;
    }

    #who-for img {
        width: 65%;
        padding-bottom: 35px;
    }

    .panel-body img {
        height: auto !important;
    }

    .hs-title-size-3 {
        font-size: 28px;
    }
}

.caption-content {
    text-align: left;
    text-shadow: 0 0 1px #60aed9;
}

#typewriter {
    /*min-width: 100%;*/
}

#typewriter .cursor {
    color: #ef6d7e;
    font-weight: bold;
    text-shadow: none;
}

#typewriter .cursor.off {
    opacity: 0;
}

.font-code {
    font-family: monospace;
}

#services {
    text-align: center;
}

#services .service {
    display: inline-block;
    color: #efefef;
    margin: 10px;
    padding: 10px;
    border-radius: 6px;
    background-color: rgba(239, 109, 126, 0.29);
}

#services .service:hover {
    transform: translateY(-5px);

    -webkit-transition: all 0.1s ease-in-out;
    -moz-transition: all 0.1s ease-in-out;
    -o-transition: all 0.1s ease-in-out;
    transition: all 0.1s ease-in-out;
}


#recent-blogs p {
    text-align: justify;
    word-wrap: break-word;
    margin: 5px 0;
    font-size: 1.3em;
}
/* ... */

